// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render basic pagination 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 6px 8px;
  background-color: hsla(0,0%,100%,0);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3.c3.c3.c3.c3 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: not-allowed;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c3.c3.c3.c3.c3:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c8.c8.c8.c8.c8:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c8.c8.c8.c8.c8:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c8.c8.c8.c8.c8:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c8.c8.c8.c8.c8 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c6.c6.c6.c6.c6 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <button
          aria-label="Previous Page"
          class="c3"
          data-blade-component="button"
          disabled=""
          role="button"
          type="button"
        >
          <div
            class=" c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(211, 20%, 52%, 0.32)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="Next Page"
          class="c8"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render disabled state 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 6px 8px;
  background-color: hsla(0,0%,100%,0);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3.c3.c3.c3.c3 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: not-allowed;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c3.c3.c3.c3.c3:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c6.c6.c6.c6.c6 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <button
          aria-label="Previous Page"
          class="c3"
          data-blade-component="button"
          disabled=""
          role="button"
          type="button"
        >
          <div
            class=" c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(211, 20%, 52%, 0.32)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="Next Page"
          class="c3"
          data-blade-component="button"
          disabled=""
          role="button"
          type="button"
        >
          <div
            class=" c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(211, 20%, 52%, 0.32)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render with all features enabled 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 6px 8px;
  background-color: hsla(0,0%,100%,0);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5.c5.c5.c5.c5 {
  text-align: left;
  position: relative;
}

.c6.c6.c6.c6.c6 {
  position: relative;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c12.c12.c12.c12.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  min-height: 36px;
}

.c14.c14.c14.c14.c14 {
  margin-top: -4px;
  width: 100%;
  min-width: min(20%,60px);
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  padding-right: 12px;
}

.c20.c20.c20.c20.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c23.c23.c23.c23.c23 {
  margin-left: 0px;
}

.c24.c24.c24.c24.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c25.c25.c25.c25.c25 {
  padding-right: 8px;
  padding-left: 8px;
}

.c27.c27.c27.c27.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c30.c30.c30.c30.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c32.c32.c32.c32.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
}

.c21.c21.c21.c21.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c22.c22.c22.c22.c22 {
  display: none;
}

.c28.c28.c28.c28.c28 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: not-allowed;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c28.c28.c28.c28.c28:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c28.c28.c28.c28.c28:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c28.c28.c28.c28.c28:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c28.c28.c28.c28.c28 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c37.c37.c37.c37.c37 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c37.c37.c37.c37.c37:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c37.c37.c37.c37.c37:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c37.c37.c37.c37.c37:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c37.c37.c37.c37.c37 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c29.c29.c29.c29.c29 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c2.c2.c2.c2.c2 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c26.c26.c26.c26.c26 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c34.c34.c34.c34.c34 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c36.c36.c36.c36.c36 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c17.c17.c17.c17.c17 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c31.c31.c31.c31.c31 {
  opacity: 1;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c15.c15.c15.c15.c15::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15:focus {
  outline: none;
}

.c10.c10.c10.c10.c10 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,40%,92%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c10.c10.c10.c10.c10:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,40%,92%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c11.c11.c11.c11.c11 {
  -webkit-animation: none;
  animation: none;
  max-height: 36px;
}

.c13.c13.c13.c13.c13 {
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c13.c13.c13.c13.c13::-webkit-scrollbar {
  display: none;
}

.c7.c7.c7.c7.c7 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c9.c9.c9.c9.c9 {
  border-radius: 4px;
  width: 100%;
}

.c9.c9.c9.c9.c9:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c33.c33.c33.c33.c33 {
  background-color: hsla(227,100%,59%,0.09);
  border: none;
  cursor: pointer;
  height: 32px;
  width: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  opacity: 1;
}

.c33.c33.c33.c33.c33:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c33.c33.c33.c33.c33:focus-visible {
  background-color: hsla(227,100%,59%,0.18);
  outline: none;
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c33.c33.c33.c33.c33:focus-visible:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c33.c33.c33.c33.c33:active {
  background-color: hsla(227,100%,59%,0.18);
}

.c35.c35.c35.c35.c35 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  height: 32px;
  width: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  opacity: 1;
}

.c35.c35.c35.c35.c35:hover {
  background-color: hsla(211,20%,52%,0.12);
}

.c35.c35.c35.c35.c35:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: none;
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c35.c35.c35.c35.c35:focus-visible:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c35.c35.c35.c35.c35:active {
  background-color: hsla(211,20%,52%,0.18);
}

@media screen and (min-width:768px) {

}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <p
        class="c2"
        data-blade-component="text"
      >
        Showing 1-10 of 100 items
      </p>
    </div>
    <div
      class="c3"
      data-blade-component="base-box"
    >
      <div
        class="c4"
        data-blade-component="base-box"
      >
        <div
          class=""
          data-blade-component="dropdown"
        >
          <div
            class="c5"
            data-blade-component="base-box"
          >
            <div
              class="c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="visually-hidden"
              >
                <input
                  aria-hidden="true"
                  name="page-size"
                  tabindex="-1"
                  value="10"
                />
              </div>
              <div
                class=""
                data-blade-component="select-input"
              >
                <div
                  class="c8"
                  data-blade-component="base-box"
                >
                  <div
                    class=" c9 focus-ring-wrapper"
                    data-blade-component="base-box"
                  >
                    <div
                      class=" c10 c11 __blade-base-input-wrapper"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c12 c13 tags-slot"
                        data-blade-component="base-box"
                      >
                        <div
                          class="c14"
                          data-blade-component="base-box"
                        >
                          <button
                            aria-controls="dropdown-7-actionlist"
                            aria-describedby=""
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-invalid="false"
                            aria-label="Select items per page"
                            aria-required="false"
                            autocomplete="off"
                            class="c15"
                            data-blade-component="styled-base-input"
                            id="dropdown-7-trigger-1-input-2"
                            name="page-size"
                            placeholder=""
                            role="combobox"
                            type="button"
                            value="10"
                          >
                            <div
                              class="c16"
                              data-blade-component="base-box"
                            >
                              <p
                                class="c17"
                                data-blade-component="text"
                              >
                                10
                              </p>
                            </div>
                          </button>
                        </div>
                      </div>
                      <div
                        class="c18"
                        data-blade-component="base-box"
                      >
                        <div
                          class="c18"
                          data-blade-component="base-box"
                        >
                          <div
                            class="c19"
                            data-blade-component="base-box"
                          >
                            <div
                              class="c20"
                              data-blade-component="base-box"
                            >
                              <svg
                                aria-hidden="true"
                                class="c21"
                                data-blade-component="icon"
                                fill="none"
                                height="16px"
                                viewBox="0 0 24 24"
                                width="16px"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                                  data-blade-component="svg-path"
                                  fill="hsla(211, 22%, 56%, 1)"
                                  fill-rule="evenodd"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="c22"
                                data-blade-component="icon"
                                fill="none"
                                height="16px"
                                viewBox="0 0 24 24"
                                width="16px"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                                  data-blade-component="svg-path"
                                  fill="hsla(211, 22%, 56%, 1)"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c23"
                  data-blade-component="base-box"
                >
                  <div
                    class="c24"
                    data-blade-component="base-box"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c25"
          data-blade-component="base-box"
        >
          <p
            class="c26"
            data-blade-component="text"
          >
             
            items / page
             
          </p>
        </div>
      </div>
      <div
        class="c27"
        data-blade-component="base-box"
      >
        <button
          aria-label="Previous Page"
          class="c28"
          data-blade-component="button"
          disabled=""
          role="button"
          type="button"
        >
          <div
            class=" c29"
            data-blade-component="base-box"
          >
            <div
              class="c30 c31"
              data-blade-component="base-box"
            >
              <div
                class="c1"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(211, 20%, 52%, 0.32)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c32"
          data-blade-component="base-box"
        >
          <button
            aria-label="Page 1"
            class="c33"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c34"
              data-blade-component="text"
            >
              1
            </p>
          </button>
          <button
            aria-label="Page 2"
            class="c35"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c36"
              data-blade-component="text"
            >
              2
            </p>
          </button>
          <button
            aria-label="Page 3"
            class="c35"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c36"
              data-blade-component="text"
            >
              3
            </p>
          </button>
          <button
            aria-label="Page 4"
            class="c35"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c36"
              data-blade-component="text"
            >
              4
            </p>
          </button>
          <button
            aria-label="Page 5"
            class="c35"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c36"
              data-blade-component="text"
            >
              5
            </p>
          </button>
          <button
            aria-label="Page 6"
            class="c35"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c36"
              data-blade-component="text"
            >
              6
            </p>
          </button>
          <button
            aria-label="Go forward 5 pages"
            class="c35"
            data-blade-component="table-page-selection-button"
          >
            <svg
              aria-hidden="true"
              class=""
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M4 9C2.34315 9 1 10.3431 1 12C1 13.6569 2.34315 15 4 15C5.65685 15 7 13.6569 7 12C7 10.3431 5.65685 9 4 9ZM9 12C9 10.3431 10.3431 9 12 9C13.6569 9 15 10.3431 15 12C15 13.6569 13.6569 15 12 15C10.3431 15 9 13.6569 9 12ZM17 12C17 10.3431 18.3431 9 20 9C21.6569 9 23 10.3431 23 12C23 13.6569 21.6569 15 20 15C18.3431 15 17 13.6569 17 12Z"
                data-blade-component="svg-path"
                fill="hsla(212, 39%, 16%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <button
            aria-label="Page 100"
            class="c35"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c36"
              data-blade-component="text"
            >
              100
            </p>
          </button>
        </div>
        <button
          aria-label="Next Page"
          class="c37"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c29"
            data-blade-component="base-box"
          >
            <div
              class="c30 c31"
              data-blade-component="base-box"
            >
              <div
                class="c1"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render with label 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 6px 8px;
  background-color: hsla(0,0%,100%,0);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 4px;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c5.c5.c5.c5.c5 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: not-allowed;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c5.c5.c5.c5.c5:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c5.c5.c5.c5.c5:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c5.c5.c5.c5.c5:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c5.c5.c5.c5.c5 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c9.c9.c9.c9.c9 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c9.c9.c9.c9.c9:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c9.c9.c9.c9.c9:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c9.c9.c9.c9.c9:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c9.c9.c9.c9.c9 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c2.c2.c2.c2.c2 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c8.c8.c8.c8.c8 {
  opacity: 1;
}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <p
        class="c2"
        data-blade-component="text"
      >
        Custom label
      </p>
    </div>
    <div
      class="c3"
      data-blade-component="base-box"
    >
      <div
        class="c4"
        data-blade-component="base-box"
      >
        <button
          aria-label="Previous Page"
          class="c5"
          data-blade-component="button"
          disabled=""
          role="button"
          type="button"
        >
          <div
            class=" c6"
            data-blade-component="base-box"
          >
            <div
              class="c7 c8"
              data-blade-component="base-box"
            >
              <div
                class="c1"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(211, 20%, 52%, 0.32)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="Next Page"
          class="c9"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c6"
            data-blade-component="base-box"
          >
            <div
              class="c7 c8"
              data-blade-component="base-box"
            >
              <div
                class="c1"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render with page number selector 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 6px 8px;
  background-color: hsla(0,0%,100%,0);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8.c8.c8.c8.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 2px;
}

.c3.c3.c3.c3.c3 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c3.c3.c3.c3.c3:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c10.c10.c10.c10.c10 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  opacity: 1;
}

.c9.c9.c9.c9.c9 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  height: 32px;
  width: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  opacity: 1;
}

.c9.c9.c9.c9.c9:hover {
  background-color: hsla(211,20%,52%,0.12);
}

.c9.c9.c9.c9.c9:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: none;
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c9.c9.c9.c9.c9:focus-visible:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c9.c9.c9.c9.c9:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c11.c11.c11.c11.c11 {
  background-color: hsla(227,100%,59%,0.09);
  border: none;
  cursor: pointer;
  height: 32px;
  width: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  opacity: 1;
}

.c11.c11.c11.c11.c11:hover {
  background-color: hsla(227,100%,59%,0.18);
}

.c11.c11.c11.c11.c11:focus-visible {
  background-color: hsla(227,100%,59%,0.18);
  outline: none;
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c11.c11.c11.c11.c11:focus-visible:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

.c11.c11.c11.c11.c11:active {
  background-color: hsla(227,100%,59%,0.18);
}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <button
          aria-label="Previous Page"
          class="c3"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c8"
          data-blade-component="base-box"
        >
          <button
            aria-label="Page 1"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              1
            </p>
          </button>
          <button
            aria-label="Go back 5 pages"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M4 9C2.34315 9 1 10.3431 1 12C1 13.6569 2.34315 15 4 15C5.65685 15 7 13.6569 7 12C7 10.3431 5.65685 9 4 9ZM9 12C9 10.3431 10.3431 9 12 9C13.6569 9 15 10.3431 15 12C15 13.6569 13.6569 15 12 15C10.3431 15 9 13.6569 9 12ZM17 12C17 10.3431 18.3431 9 20 9C21.6569 9 23 10.3431 23 12C23 13.6569 21.6569 15 20 15C18.3431 15 17 13.6569 17 12Z"
                data-blade-component="svg-path"
                fill="hsla(212, 39%, 16%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <button
            aria-label="Page 4"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              4
            </p>
          </button>
          <button
            aria-label="Page 5"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              5
            </p>
          </button>
          <button
            aria-label="Page 6"
            class="c11"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c12"
              data-blade-component="text"
            >
              6
            </p>
          </button>
          <button
            aria-label="Page 7"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              7
            </p>
          </button>
          <button
            aria-label="Page 8"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              8
            </p>
          </button>
          <button
            aria-label="Go forward 5 pages"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="16px"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                clip-rule="evenodd"
                d="M4 9C2.34315 9 1 10.3431 1 12C1 13.6569 2.34315 15 4 15C5.65685 15 7 13.6569 7 12C7 10.3431 5.65685 9 4 9ZM9 12C9 10.3431 10.3431 9 12 9C13.6569 9 15 10.3431 15 12C15 13.6569 13.6569 15 12 15C10.3431 15 9 13.6569 9 12ZM17 12C17 10.3431 18.3431 9 20 9C21.6569 9 23 10.3431 23 12C23 13.6569 21.6569 15 20 15C18.3431 15 17 13.6569 17 12Z"
                data-blade-component="svg-path"
                fill="hsla(212, 39%, 16%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <button
            aria-label="Page 100"
            class="c9"
            data-blade-component="table-page-selection-button"
          >
            <p
              class="c10"
              data-blade-component="text"
            >
              100
            </p>
          </button>
        </div>
        <button
          aria-label="Next Page"
          class="c3"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class="Svgweb__StyledSvg-vcmjs8-0"
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Pagination /> should render with page size picker 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 6px 8px;
  background-color: hsla(0,0%,100%,0);
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  gap: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3.c3.c3.c3 {
  text-align: left;
  position: relative;
}

.c4.c4.c4.c4.c4 {
  position: relative;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c10.c10.c10.c10.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  min-height: 36px;
}

.c12.c12.c12.c12.c12 {
  margin-top: -4px;
  width: 100%;
  min-width: min(20%,60px);
}

.c14.c14.c14.c14.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c16.c16.c16.c16.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c17.c17.c17.c17.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  padding-right: 12px;
}

.c18.c18.c18.c18.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c21.c21.c21.c21.c21 {
  margin-left: 0px;
}

.c22.c22.c22.c22.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c23.c23.c23.c23.c23 {
  padding-right: 8px;
  padding-left: 8px;
}

.c25.c25.c25.c25.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c28.c28.c28.c28.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c30.c30.c30.c30.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19.c19.c19.c19.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c20.c20.c20.c20.c20 {
  display: none;
}

.c26.c26.c26.c26.c26 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: not-allowed;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c26.c26.c26.c26.c26:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c26.c26.c26.c26.c26:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c26.c26.c26.c26.c26:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c26.c26.c26.c26.c26 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c31.c31.c31.c31.c31 {
  min-height: 36px;
  height: 36px;
  width: 36px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.12);
  border-color: hsla(214,40%,92%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c31.c31.c31.c31.c31:hover {
  background-color: hsla(211,20%,52%,0.18);
}

.c31.c31.c31.c31.c31:active {
  background-color: hsla(211,20%,52%,0.18);
}

.c31.c31.c31.c31.c31:focus-visible {
  background-color: hsla(211,20%,52%,0.18);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c31.c31.c31.c31.c31 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c27.c27.c27.c27.c27 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c24.c24.c24.c24.c24 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c29.c29.c29.c29.c29 {
  opacity: 1;
}

.c13.c13.c13.c13.c13 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsla(0,0%,100%,0);
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 0px;
  padding-right: 8px;
  width: 100%;
  height: 36px;
  min-height: 36px;
  resize: none;
  outline: none;
  border: none;
  cursor: auto;
}

.c13.c13.c13.c13.c13::-webkit-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13::-moz-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13:-ms-input-placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13::placeholder {
  color: hsla(211,20%,52%,0.32);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c13.c13.c13.c13.c13:focus {
  outline: none;
}

.c8.c8.c8.c8.c8 {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,40%,92%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover {
  background-color: hsla(210,40%,98%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,28%,84%,1) 0px 0px 0px 1px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:focus-within {
  background-color: hsla(0,0%,100%,1);
  border-radius: 4px;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  position: relative;
  height: auto;
  border: none;
  border-width: 0px;
  box-shadow: hsla(214,40%,92%,1) 0px 0px 0px 1px;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-easing: cubic-bezier(0.3,0,0.2,1);
  transition-easing: cubic-bezier(0.3,0,0.2,1);
}

.c9.c9.c9.c9.c9 {
  -webkit-animation: none;
  animation: none;
  max-height: 36px;
}

.c11.c11.c11.c11.c11 {
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c11.c11.c11.c11.c11::-webkit-scrollbar {
  display: none;
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c7.c7.c7.c7.c7 {
  border-radius: 4px;
  width: 100%;
}

.c7.c7.c7.c7.c7:focus-within {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 480ms;
  transition-duration: 480ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
}

@media screen and (min-width:768px) {

}

<div>
  <div
    class="c0"
    data-blade-component="base-box"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <div
          class=""
          data-blade-component="dropdown"
        >
          <div
            class="c3"
            data-blade-component="base-box"
          >
            <div
              class="c4"
              data-blade-component="base-box"
            >
              <div
                class="c5"
                data-blade-component="visually-hidden"
              >
                <input
                  aria-hidden="true"
                  name="page-size"
                  tabindex="-1"
                  value="25"
                />
              </div>
              <div
                class=""
                data-blade-component="select-input"
              >
                <div
                  class="c6"
                  data-blade-component="base-box"
                >
                  <div
                    class=" c7 focus-ring-wrapper"
                    data-blade-component="base-box"
                  >
                    <div
                      class=" c8 c9 __blade-base-input-wrapper"
                      data-blade-component="base-box"
                    >
                      <div
                        class="c10 c11 tags-slot"
                        data-blade-component="base-box"
                      >
                        <div
                          class="c12"
                          data-blade-component="base-box"
                        >
                          <button
                            aria-controls="dropdown-29-actionlist"
                            aria-describedby=""
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-invalid="false"
                            aria-label="Select items per page"
                            aria-required="false"
                            autocomplete="off"
                            class="c13"
                            data-blade-component="styled-base-input"
                            id="dropdown-29-trigger-30-input-31"
                            name="page-size"
                            placeholder=""
                            role="combobox"
                            type="button"
                            value="25"
                          >
                            <div
                              class="c14"
                              data-blade-component="base-box"
                            >
                              <p
                                class="c15"
                                data-blade-component="text"
                              >
                                25
                              </p>
                            </div>
                          </button>
                        </div>
                      </div>
                      <div
                        class="c16"
                        data-blade-component="base-box"
                      >
                        <div
                          class="c16"
                          data-blade-component="base-box"
                        >
                          <div
                            class="c17"
                            data-blade-component="base-box"
                          >
                            <div
                              class="c18"
                              data-blade-component="base-box"
                            >
                              <svg
                                aria-hidden="true"
                                class="c19"
                                data-blade-component="icon"
                                fill="none"
                                height="16px"
                                viewBox="0 0 24 24"
                                width="16px"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                                  data-blade-component="svg-path"
                                  fill="hsla(211, 22%, 56%, 1)"
                                  fill-rule="evenodd"
                                />
                              </svg>
                              <svg
                                aria-hidden="true"
                                class="c20"
                                data-blade-component="icon"
                                fill="none"
                                height="16px"
                                viewBox="0 0 24 24"
                                width="16px"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M11.2929 8.29289C11.6834 7.90237 12.3166 7.90237 12.7071 8.29289L18.7071 14.2929C19.0976 14.6834 19.0976 15.3166 18.7071 15.7071C18.3166 16.0976 17.6834 16.0976 17.2929 15.7071L12 10.4142L6.70711 15.7071C6.31658 16.0976 5.68342 16.0976 5.29289 15.7071C4.90237 15.3166 4.90237 14.6834 5.29289 14.2929L11.2929 8.29289Z"
                                  data-blade-component="svg-path"
                                  fill="hsla(211, 22%, 56%, 1)"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c21"
                  data-blade-component="base-box"
                >
                  <div
                    class="c22"
                    data-blade-component="base-box"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="c23"
          data-blade-component="base-box"
        >
          <p
            class="c24"
            data-blade-component="text"
          >
             
            items / page
             
          </p>
        </div>
      </div>
      <div
        class="c25"
        data-blade-component="base-box"
      >
        <button
          aria-label="Previous Page"
          class="c26"
          data-blade-component="button"
          disabled=""
          role="button"
          type="button"
        >
          <div
            class=" c27"
            data-blade-component="base-box"
          >
            <div
              class="c28 c29"
              data-blade-component="base-box"
            >
              <div
                class="c30"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.29289 12.7071C7.90237 12.3166 7.90237 11.6834 8.29289 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(211, 20%, 52%, 0.32)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="Next Page"
          class="c31"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c27"
            data-blade-component="base-box"
          >
            <div
              class="c28 c29"
              data-blade-component="base-box"
            >
              <div
                class="c30"
                data-blade-component="base-box"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-blade-component="icon"
                  fill="none"
                  height="16px"
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
                    data-blade-component="svg-path"
                    fill="hsla(212, 39%, 16%, 1)"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
